fixing hover on mobile

--- a/style.css
+++ b/style.css
@@ -123,6 +123,18 @@ h1 {
     }
 
 
+    .container-player-increment:hover {
+        font-size: 60px;
+          
+    }
+
+    .container-player-increment:active {
+        font-size: 65px;
+        cursor: pointer;
+        transition: 0.9s;
+        
+    }
+
     .container-name {
         display: none;
     }
@@ -156,4 +168,5 @@ h1 {
     }
 
 
+   
 }
